# fastapi-react-graphql

./: .dockerignore  .env  .gitignore  README.md  docker-compose.yaml
.github/workflows/: docker-image.yml  server-docker-image.yml
client/: .env.development  .env.production  Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/src/: App.jsx  main.jsx
client/src/components/contents/: contents.jsx
client/src/components/header/: header.jsx
client/src/components/scatterplot/: ScatterPlot2D.jsx
client/src/components/sidebar/: sidebar.jsx
client/src/components/table/: data-table.jsx
client/src/config/: config.js
client/src/features/error/: error-page.jsx
client/src/features/iris/: iris-page.jsx
client/src/features/pagination/: paginationSlice.js
client/src/features/predictions/: predictions-page.jsx
client/src/features/variables/: relationshipSlice.js
client/src/gql/: client.js  queries.js
client/src/providers/: app.jsx
client/src/routes/: router.jsx
client/src/store/: store.js
scripts/: build.sh  deploy.sh  down.sh  push.sh  up.sh
server/: Dockerfile  main.py  pyproject.toml
server/gql/: __init__.py  resolvers.py  schemas.py
server/ml/: __init__.py  logistic_regression.py
server/model/: __init__.py  database.py  models.py
server/services/: __init__.py  cache.py  search.py
sql/: init.sql
